--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "google-libphonenumber": "3.0.0",
     "moment": "2.18.1",
     "mongoose": "4.11.5",
     "morgan": "~1.8.1",
